--- a/style.css
+++ b/style.css
@@ -12,15 +12,27 @@ input {
     padding: 0;
 }
 
-input[type='color'] {
-    box-sizing: content-box;
-    background-color: var(--background);
+input[type="color"] {
+    appearance: none;
+    border: none;
     width: 100px;
     height: 100px;
-    border: none;
     border-radius: 50%;
     padding: 0;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+    border: none;
+    border-radius: 50%;
+}
+
 
 body {
     display: flex;
@@ -40,6 +52,7 @@ body {
     align-content: center;
     justify-content: center;
     margin: 0;
+    background-color: white;
 }
 
 .box {
