--- a/style.css
+++ b/style.css
@@ -14,14 +14,13 @@ input {
 
 input[type="color"] {
     appearance: none;
-    border: none;
+    border-color: #7A1CAC;
     width: 100px;
     height: 100px;
     border-radius: 50%;
     padding: 0;
     overflow: hidden;
     cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
@@ -33,12 +32,24 @@ input[type="color"]::-webkit-color-swatch {
     border-radius: 50%;
 }
 
+#functions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    border-radius: 10%;
+
+    padding: 5%;
+    color: #2E073F;
+}
 
 body {
     display: flex;
-    align-content: center;
-    align-items: flex-start;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
     flex-wrap: wrap;
     gap: 100px;
 }
