--- a/style.css
+++ b/style.css
@@ -36,12 +36,20 @@ input[type="color"]::-webkit-color-swatch {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    align-self: flex-start;
     gap: 10px;
     border-radius: 10%;
-
-    padding: 5%;
     color: #2E073F;
+    height:
+        100%;
+}
+
+.parent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
 }
 
 body {
