--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
     --dark-purple: #2E073F;
     --medium-purple: #7A1CAC;
     --light-purple: #AD49E1;
     --background: #EBD3F8;
     background-color: var(--background);
-
+    font-family: 'poppins';
 }
 
 input {
@@ -36,20 +38,36 @@ input[type="color"]::-webkit-color-swatch {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    align-self: flex-start;
     gap: 10px;
-    border-radius: 10%;
+    padding: 20px 30px;
+    border: 2px solid var(--dark-purple);
     color: #2E073F;
-    height:
-        100%;
+    height: 100%;
+    background-color: #FFF5EA;
+}
+
+@media screen and (max-width: 912px) {
+    .parent {
+        gap: 50px !important;
+    }
+}
+
+button {
+    background-color: rgb(51, 41, 56);
+    border: none;
+    color: #dbdbdb;
+    font-weight: bold;
+
+    border-radius: 14px;
+    padding: 12px 10px;
 }
 
 .parent {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 130px;
+    flex-wrap: wrap;
 }
 
 body {
@@ -62,9 +80,14 @@ body {
     gap: 100px;
 }
 
+.stroke {
+    border: 2px solid var(--dark-purple);
+}
+
 .container {
     box-sizing: border-box;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: #FFF5EA;
+
     width: 500px;
     display: flex;
     flex-wrap: wrap;
